--- a/style.css
+++ b/style.css
@@ -5,9 +5,19 @@ a{
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	
 }
-
+.contacticons
+{
+	border-radius: 50%;
+	border: 2px solid #717171;
+	padding: 1px;
+	width: 120px;
+	height:120px;
+	margin-top:17%;
+}
+.contacticons:hover {
+	border: 2px solid #5a5a5a;
+}
 .avatar {
 	border-radius: 50%;
 	border: 2px solid #717171;
