--- a/style.css
+++ b/style.css
@@ -1,6 +1,14 @@
 a{
 	text-decoration: none;
 }
+.games
+{
+	font-family: Tahoma;
+	font-size: 20px;
+	font-style: italic;
+	font-weight: 600;
+	color: #225522;
+}
 .center {
 	display: block;
 	margin-left: auto;
