updated text animation to resolve bugs

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,8 @@
 /*
-------------------------------------------------------------------------
-* Template Name    : Elvish | Responsive Bootstrap 4 Personal Template * 
-* Author           : ThemesBoss                                        *
+------------------------------------------------------------------------ 
+* Author           : AliSoltani                                        *
 * Version          : 1.0.0                                             *
-* Created          : May 2018                                        *
+* Created          : May 2018                                          *
 * File Description : Main Css file of the template                     *
 *-----------------------------------------------------------------------
 */
